# First-Call-By-OpenAi-APi

./: README.md  day1.ipynb  pyproject.toml
