[project]
name = "llm-engineering"
version = "0.1.0"
requires-python = ">=3.11,<3.13"

dependencies = [
    "anthropic>=0.69.0",
    "beautifulsoup4>=4.12",
    "chromadb>=1.3.0,<2.0",
    "datasets>=2.19,<4",
    "feedparser>=6.0.12",
    "google-genai>=1.41.0",
    "google-generativeai>=0.8.5",
    "gradio>=5.47.2",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",

    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.30",
    "langchain-core>=0.3.76",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "langchain-huggingface>=1.0.0",
    "langchain-ollama>=1.0.0",
    "langchain-anthropic>=1.0.1",
    "langchain-experimental>=0.0.42",

    "litellm>=1.77.5",
    "matplotlib>=3.8",
    "nbformat>=5.10.4",

    "modal>=1.1.4",
    "numpy>=1.26.4,<2.0",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "pandas>=2.1,<3",
    "plotly>=6.3.0",

    "protobuf>=4.25.3,<6",
    "psutil>=7.1.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",

    "scikit-learn>=1.4,<1.8",
    "scipy>=1.11,<1.17",
    "sentence-transformers>=5.1.1",

    "tiktoken>=0.11.0",
    "torch>=2.2.2,<2.4",
    "tqdm>=4.67.1",
    "transformers>=4.40,<5",

    "wandb>=0.22.1",
    "groq>=0.33.0",
    "xgboost>=2.0,<3.2",
]
